# rosout_mcp

./: Dockerfile  LICENSE  README.md  docker_build_run.sh  pyproject.toml  rosout_mcp.py
.github/workflows/: test.yml
bags/rosbag2_2025_08_12-17_40_16/: rosbag2_2025_08_12-17_40_16_0.mcap
bags/rosout_mcp_usecase/: metadata.yaml  rosout_mcp_usecase_0.mcap
data/rosbag2_2025_08_12-17_26_19/: metadata.yaml  rosbag2_2025_08_12-17_26_19_0.mcap
data/rosbag2_2025_08_12-17_40_16/: metadata.yaml
docker/: Dockerfile  build_run.sh  docker-entrypoint.sh
example/: usecase_sample.py
images/: rosout_mcp_sample.webm
scripts/: api_server.py  log_provider.py  main_rosbag.py  mcp_server.py  rosbag_provider.py  rosout_provider.py
src/rosout_mcp/: bag_loader.py  db_manager.py  rosout_mcp.py  sqlite_query.py  usecase_sample.py
tests/: conftest.py  test_bag_loader.py  test_db_manager.py  test_sqlite_query.py
