[project]
name = "rosout-mcp"
version = "0.1.0"
description = "A tool to retrieve ROS2 rosout logs via MCP"
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=0.1.0",
    "mcp[cli]>=1.12.4",
    "numpy>=2.3.2",
    "pyyaml>=6.0.2",
]

# For testing
[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
]

[project.scripts]
rosout-mcp = "rosout_mcp.rosout_mcp:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--tb=short",
    "--strict-config",
    "--strict-markers",
    "--cov=src/rosout_mcp",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
]

[tool.isort]
profile = "black"
known_standard_library = ["os", "pathlib", "sys", "tempfile"]
known_third_party = ["pytest"]
known_first_party = ["rosout_mcp"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
force_sort_within_sections = true
skip_glob = ["tests/conftest.py"]
