[project]
name = "rosout-mcp"
version = "0.1.0"
description = "A tool to retrieve ROS2 rosout logs via MCP"
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=0.1.0",
    "mcp[cli]>=1.12.4",
    "numpy>=1.21.0",
    "pyyaml>=6.0.0",
]

# For testing
[project.optional-dependencies]
test = [
    "lark>=1.2.2",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
]

[project.scripts]
rosout-mcp = "rosout_mcp.rosout_mcp:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--tb=short",
    "--strict-config",
    "--strict-markers",
    "--cov=src/rosout_mcp",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
]

[tool.isort]
profile = "black"
known_standard_library = ["os", "logging", "pathlib", "sys", "tempfile", "typing"]
known_third_party = ["pytest"]
known_first_party = ["rosout_mcp"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
